Make the component themable. Additionally, when I working on this version the Datetime picker and components are not responsive on UI, could someone help fix it?

--- a/src/styles/defaultFactories/Checkbox.less
+++ b/src/styles/defaultFactories/Checkbox.less
@@ -7,3 +7,13 @@
 .form-horizontal .cb-fix {
   margin-bottom: 7px !important;
 }
+
+.metaform-group-content .col-md-12 .cb-fix label{
+  font-size: @font-size;
+  font-family: @font-family;
+  font-weight: @font-weight;
+}
+
+input[type="checkbox"] {
+  margin: 2.0px 0 0;
+}
