--- a/src/styles/infrastructure/MetaFormGroup.less
+++ b/src/styles/infrastructure/MetaFormGroup.less
@@ -38,7 +38,3 @@
   display:inline-block;
 }
 
-.metaform-group-content {
-
-}
-
